# intersecting_segments

./: CMakeLists.txt  README.md
include/: AVLNode.h  AVLTree.h  Point.h  Segment.h  Service.h  Tests.h  Tree23.h  Tree23Node.h
src/: Point.cpp  Segment.cpp  Service.cpp  main.cpp
